youfull/objects/Branch_Summary__c.object
<CustomObject>
    <fields>
        <fullName>ACCT_NR__c</fullName>
        <label>Account Nr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOOK1_GRP_UNIT_SLS_AMT__c</fullName>
        <label>Book 1 Team Volume</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK2_GRP_UNIT_SLS_AMT__c</fullName>
        <label>Book2 Team Volume</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNCH_SCTN_CD__c</fullName>
        <label>Branch Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Summary_Key__c</fullName>
        <externalId>true</externalId>
        <label>Branch Summary key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPGN_NR_2_TEXT__c</fullName>
        <description>Campaign Number Converted to Text</description>
        <formula>TEXT(CMPGN_NR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR__c</fullName>
        <label>Campaign Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_BAL_AMT__c</fullName>
        <label>Current Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_BRCHR_CNT__c</fullName>
        <label>Team Brochures</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_FAP_CNT__c</fullName>
        <label>Team Super Hits</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_PAST_DUE_AMT__c</fullName>
        <label>Amount Overdue</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_UNIT_SLS_AMT__c</fullName>
        <description>BOOK1_GRP_UNIT_SLS_AMT__c  +  BOOK2_GRP_UNIT_SLS_AMT__c</description>
        <formula>BOOK1_GRP_UNIT_SLS_AMT__c  +  BOOK2_GRP_UNIT_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Team Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>Market ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_GRP_UNIT_SLS_AMT__c</fullName>
        <label>Prior Year Team Volume</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_GRP_UNIT_SLS_AMT__c</fullName>
        <label>YTD Volume</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Branch Summary</label>
    <nameField>
        <label>Branch Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch_Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>